# hardwarextractor

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  enrichment_crossvalidate_report.json  enrichment_report.json  enrichment_valid_report.json  icnsFile_0a7782c085eea2ac5e8527e215d70bf9_Open_GPIB.icns  playwright_test_results.json  pyproject.toml  test_report.json
.github/workflows/: publish.yml
cli/hxtractor/: README.md  hxtractor-0.1.0.tgz  package.json
docs/: ACCEPTANCE_TESTS.md  AUDIT_AND_ROADMAP.md  FIELD_CATALOG.md  MAPPING_MATRIX.md  PRD.md  README.md  SEAL.md  SPIDER_SCOPE.md
docs/cli-specs/: CLI_SPEC.md  NPM_DISTRIBUTION.md
docs/equipos_informaticos_specs/: SOURCE_POLICY.md  TECH_SPEC.md
docs/plans/: 2025-01-30-beta-feedback-system-design.md  2026-01-29-scraper-restructure-design.md  2026-01-30-cross-validation-design.md
hardwarextractor/: __main__.py  _version.py  cli_engine.py
hardwarextractor/app/: orchestrator.py
hardwarextractor/classifier/: heuristic.py
hardwarextractor/cli/: interactive.py  renderer.py
hardwarextractor/core/: cross_validator.py  events.py  source_chain.py
hardwarextractor/data/: catalog.py  catalog_metadata.json  catalog_writer.py  enrichment_index.json  (+7 more)
packaging/: pyinstaller.spec
scripts/: autotest.py  enrich_catalog.py  enrich_catalog_crossvalidate.py  enrich_from_public_sources.py  enrich_tpu_cpus.py  enrich_valid_catalog.py  enrich_with_all_sources.py  expand_catalog.py  make_dmg.sh  package_mac.sh  ralph_loop.py  ralph_wiggum_loop.py  test_sources_with_playwright.py  tpu_cpu_links.txt  update_amd_urls.py
(+99 files in other folders)
